各种资源文件添加（anim，selector），工具类（L，MFGT）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">usury</string>
-    <string name="app_name1">app name</string>
+    <string name="app_name">App Name</string>
 </resources>
