--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="temp_name">临时名称</string>
     <string name="app_name_default1">向钱贷</string>
+    <string name="username_default">请登录</string>
 </resources>
