--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,13 @@
     <string name="temp_name">临时名称</string>
     <string name="app_name_default1">向钱贷</string>
     <string name="username_default">请登录</string>
+    <string name="text_size_title">18sp</string>
+    <string name="login_fast">快捷登录</string>
+    <string name="login_password">账号登录</string>
+    <string name="login_username_hint">请输入手机号</string>
+    <string name="identifying_code">请输入验证码</string>
+    <string name="identifying_code_send">发送验证码</string>
+    <string name="login">登录</string>
+    <string name="slogan">急速借款，上好贷款管家</string>
+    <string name="password_hint">6-20位密码</string>
 </resources>
