--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="illegal_phone_number">请输入11位手机号码</string>
     <string name="illegal_password">请输入6-20位密码</string>
     <string name="identifyingCode_cannot_be_empty">验证码不能为空</string>
+    <string name="save">保存</string>
+    <string name="personal_info">个人信息</string>
 </resources>
